--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title>Personal Site</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/main.css">
+</head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+	<nav class="container" role="navigation">
+		<ul class="nav nav-tabs">
+			<li role="presentation" class="active"><a href="index.html">Home</a></li>
+			<li role="presentation"><a href="projects.html">Projects</a></li>
+			<li role="presentation"><a href="courses.html">Completed Courses</a></li>
+		</ul>
+	</nav>
+	
+	<section class="container">
+		<h3>Welcome</h3>
+		I'm Bader Nasser Al-hashmi, from a city in Oman called Sur.<br>
+		I'm a computer engineer and a developer.
+
+		<h3>Skills</h3>
+		<ul>
+			<li>Building websites using HTML5, CSS3, Bootstrap, JavaScript, jQuery, AngularJS and PHP.
+			</li>
+			<li>Creating RESTfull APIs using PHP and Restler3 framework.</li>
+			<li>Building native Android Applications using Android Studio, XML and Java.</li>
+			<li>Designing databases and using relational database management systems like MySQL and MS SQL Server.</li>
+			<li>Developing WPF desktop applications using XAML and C#. (<i>beginner</i>)</li>
+		</ul>
+
+		<h3>Contact</h3>
+		Feel free to contact me any time.
+		<ul>
+			<li>gmail & hangout: <a href="mailto:badersur@gmail.com">badersur@gmail.com</a></li>
+			<li>Telegram: @BaderSur</li>
+		</ul>
+		
+		<!-- 
+		<h3>Changelog</h3>
+		<ul>
+			<li>unknown future: Maybe I'd use angular & jQuery & add the arabic version!</li>
+			<li>August 30, 2015: Adding courses and projects pages.</li>
+			<li>April 3, 2015: Saying Hello to the world!</li>
+		</ul>
+		-->
+	</section>
+
 </body>
+
 </html>
