--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<ul>
 			<li>Building websites using HTML5, CSS3, Bootstrap, JavaScript, jQuery, AngularJS and PHP.
 			</li>
-			<li>Creating RESTfull APIs using PHP and Restler3 framework.</li>
+			<li>Creating RESTful APIs using PHP and Restler3 framework.</li>
 			<li>Building native Android Applications using Android Studio, XML and Java.</li>
 			<li>Designing databases and using relational database management systems like MySQL and MS SQL Server.</li>
 			<li>Developing WPF desktop applications using XAML and C#. (<i>beginner</i>)</li>
