modification and explanation

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 
 		<h3>Websites</h3>
 		<ul>
-			<li>Local website to show some pre-downloaded courses.</li>
+			<li>Local website to show some downloaded courses. (Mostly from udacity and Microsoft Virtual Academy)</li>
 			<li><b>E-Bookshop</b>: A website created with my colleague for the university's database course.</li>
 			<li><b>Search engine</b>: (will be done soon!) I will implement the crawler created while learning 
 			from <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
