Added some projects..

--- a/courses.html
+++ b/courses.html
@@ -17,39 +17,38 @@
 		<ul class="nav nav-tabs">
 			<li role="presentation"><a href="index.html">Home</a></li>
 			<li role="presentation"><a href="projects.html">Projects</a></li>
+			<li role="presentation"><a href="show.html">Show room</a></li>
 			<li role="presentation" class="active"><a href="courses.html">Completed Courses</a></li>
 		</ul>
 	</nav>
 
 	<section class="container">
-		<h3>From CodeCademy:</h3>
-		<ul>
-			<li>HTML, CSS, JavaScript, jQuery, AngularJS and PHP. 
-				Click <a href="https://www.codecademy.com/BaderSur">here</a> to see	my profile.</li>
-		</ul>
+		<!--<h4>From CodeCademy:</h4>-->
+		<ul class="courses">
+			<li>jQuery, AngularJS, PHP and others from <b>CodeCademy</b>. Click <a href="https://www.codecademy.com/BaderSur">here</a>				to see my profile.</li>
+			<!--</ul>-->
 
-		<h3>From Microsoft Virtual Academy:</h3>
-		<ul>
-			<li>HTML, CSS, JavaScript, C# and MS SQL Server. 
-				Click <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3423187">here</a> to see my profile.</li>
-		</ul>
-		
-		<h3>From NewCircle's Youtube channel:</h3>
-		<ul>
-			<li>Android Bootcamp Series 2012.
-				Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here</a> to watch the series.<br>
-				I watched some series before watching this one but this was more helpful.<br>
-				Also, I watched google's course on udacity and found it helpful too but I recommend this for beginners.</li>
-		</ul>
+			<!--<h4>From Microsoft Virtual Academy:</h4>-->
+			<!--<ul>-->
+			<li>C#, MS SQL Server and others from <b>Microsoft Virtual Academy</b>. Click <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3423187">here</a>				to see my profile.</li>
+			<!--</ul>-->
 
-		<h3>From Udacity:</h3>
-		<ul>
-			<li><a href="https://www.udacity.com/course/developing-android-apps--ud853">Developing Android Apps</a></li>
-			<li><a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
+			<!--<h4>From NewCircle's Youtube channel:</h4>-->
+			<!--<ul>-->
+			<li>Android Bootcamp Series from <b>NewCircle's Youtube channel</b>. Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here</a>				to watch the series.</li>
+			<!--</ul>-->
+
+			<li>From <b>Udacity</b>:
+				<ul>
+					<li><a href="https://www.udacity.com/course/developing-android-apps--ud853">Developing Android Apps</a></li>
+					<li><a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
 			Intro to Computer Science</a></li>
-			<li><a href="https://www.udacity.com/course/intro-to-html-and-css--ud304">Intro to HTML and CSS</a></li>
-			<li><a href="https://www.udacity.com/course/programming-foundations-with-python--ud036">
+					<li><a href="https://www.udacity.com/course/intro-to-html-and-css--ud304">Intro to HTML and CSS</a></li>
+					<li><a href="https://www.udacity.com/course/javascript-basics--ud804">JavaScript Basics</a></li>
+					<li><a href="https://www.udacity.com/course/programming-foundations-with-python--ud036">
 			Programming Foundations with Python</a></li>
+				</ul>
+			</li>
 		</ul>
 	</section>
 
