--- a/index.html
+++ b/index.html
@@ -17,40 +17,45 @@
 		<ul class="nav nav-tabs">
 			<li role="presentation" class="active"><a href="index.html">Home</a></li>
 			<li role="presentation"><a href="projects.html">Projects</a></li>
+			<li role="presentation"><a href="show.html">Show room</a></li>
 			<li role="presentation"><a href="courses.html">Completed Courses</a></li>
 		</ul>
 	</nav>
-	
+
 	<section class="container">
-		<h3>Welcome</h3>
-		I'm Bader Nasser Al-hashmi, from a city in Oman called Sur.<br>
-		I'm a computer engineer and a developer.
+		<div class="row">
 
-		<h3>Skills</h3>
-		<ul>
-			<li>Building websites using HTML5, CSS3, Bootstrap, JavaScript, jQuery, AngularJS and PHP.
-			</li>
-			<li>Creating RESTful APIs using PHP and Restler3 framework.</li>
-			<li>Building native Android Applications using Android Studio, XML and Java.</li>
-			<li>Designing databases and using relational database management systems like MySQL and MS SQL Server.</li>
-			<li>Developing WPF desktop applications using XAML and C#. (<i>beginner</i>)</li>
-		</ul>
+			<div class="col-sm-8">
+				<h4>Welcome</h4> I'm Bader Nasser Al-hashmi, from a city in Oman called Sur.
+				<br> I'm a computer engineer and a developer.
 
-		<h3>Contact</h3>
-		Feel free to contact me any time.
-		<ul>
-			<li>gmail & hangout: <a href="mailto:badersur@gmail.com">badersur@gmail.com</a></li>
-			<li>Telegram: @BaderSur</li>
-		</ul>
-		
-		<!-- 
-		<h3>Changelog</h3>
-		<ul>
-			<li>unknown future: Maybe I'd use angular & jQuery & add the arabic version!</li>
-			<li>August 30, 2015: Adding courses and projects pages.</li>
-			<li>April 3, 2015: Saying Hello to the world!</li>
-		</ul>
-		-->
+				<h4>Skills</h4>
+				<ul>
+					<li>Building websites using HTML5, CSS3, Bootstrap, JavaScript, jQuery, AngularJS and PHP.
+					</li>
+					<li>Creating RESTful APIs using PHP and Restler framework.</li>
+					<li>Building native Android Applications using Android Studio, XML and Java.</li>
+					<li>Designing databases and using relational database management systems like MySQL and MS SQL Server.</li>
+					<li>Developing WPF desktop applications using XAML and C#. (<i>beginner</i>)</li>
+				</ul>
+
+				<h4>Contact</h4> Feel free to contact me any time.
+				<ul>
+					<li>gmail & hangout: <a href="mailto:badersur@gmail.com">badersur@gmail.com</a></li>
+					<li>Telegram: @BaderSur</li>
+				</ul>
+			</div>
+
+			<div class="col-sm-4 side">
+				<h4>Favourite quotes</h4>
+				<div id="quotes">
+					<blockquote>Check it twice, do it once.</blockquote>
+					<blockquote>Slowly.. slowly.. catch your monkey.</blockquote>
+					<blockquote>Never give up.</blockquote>
+				</div>
+			</div>
+
+		</div>
 	</section>
 
 </body>
