--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,13 @@
 		<ul class="nav nav-tabs">
 			<li role="presentation"><a href="index.html">Home</a></li>
 			<li role="presentation" class="active"><a href="projects.html">Projects</a></li>
+			<li role="presentation"><a href="show.html">Show room</a></li>
 			<li role="presentation"><a href="courses.html">Completed Courses</a></li>
 		</ul>
 	</nav>
 	
 	<section class="container">
-		<h3>Android Projects</h3>
+		<h4>Android Applications</h4>
 		<i>Published applications can be found <a href="https://play.google.com/store/apps/developer?id=BaderSur">here</a>.</i>
 		<ul>
 			<li><b>Sur News</b>: fetches local news about Sur using jsoup library.</li>
@@ -32,18 +33,19 @@
 			<li>others like: file downloader, local APIs testers and random numbers generator!</li>
 		</ul>
 
-		<h3>Websites</h3>
+		<h4>Websites</h4>
 		<ul>
-			<li>Local website to show some downloaded courses. (Mostly from udacity and Microsoft Virtual Academy)</li>
+			<li>Local website to show some downloaded courses. (Mostly from Udacity and Microsoft Virtual Academy)</li>
 			<li><b>E-Bookshop</b>: A website created with my colleague for the university's database course.</li>
 			<li><b>Search engine</b>: (will be done soon!) I will implement the crawler created while learning 
 			from <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
 			Intro to Computer Science</a> course.<br>
-			I <b>advise</b> you to take the course in case you are interested in learning about 
-			Computer science and programming using Python.</li>
+			I <i>advise</i> you to take the course if you are interested in learning about 
+			Computer science and programming.</li>
+			<li><b>Others</b>: shown in <a href="show.html">show room</a> page.</li>
 		</ul>
 
-		<h3>WPF Desktop Applications</h3>
+		<h4>WPF Desktop Applications</h4>
 		<ul>
 			<li><b>Image viewer</b>: lists the images in any folder and stretches their width to the maximum width of the application.</li>
 			<li><b>Hasher</b>: computes the hash values of the files.</li>
