--- a/reader.html
+++ b/reader.html
@@ -15,7 +15,7 @@
 	<noscript>
 		<header>
 			<div class="container">
-				Please enable JavaScript.
+				All contents (descriptions) are shown but the purpose of this page is to show them interactively using <b>JavaScript</b>, please enable it.
 			</div>
 		</header>
 	</noscript>
