using CDNs instead of local files
It's recommended to use CDNs to save some bandwidth so I use it now!

--- a/reader.html
+++ b/reader.html
@@ -8,14 +8,15 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>Reader</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/reader.css">
-	<script src="js/vendors/jquery2.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/reader.js"></script>
 	<noscript>
 		<header>
 			<div class="container">
-				All contents (descriptions) are shown but the purpose of this page is to show them interactively using <b>JavaScript</b>, please enable it.
+				All contents (descriptions) are shown but the purpose of this page is to show them interactively using <b>JavaScript</b>,
+				please enable it.
 			</div>
 		</header>
 	</noscript>
