--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>Projects</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -21,15 +21,15 @@
 			<li role="presentation"><a href="courses.html">Completed Courses</a></li>
 		</ul>
 	</nav>
-	
+
 	<section class="container">
 		<h4>Android Applications</h4>
 		<i>Published applications can be found <a href="https://play.google.com/store/apps/developer?id=BaderSur">here</a>.</i>
 		<ul>
 			<li><b>Sur News</b>: fetches local news about Sur using jsoup library.</li>
 			<li><b>Sunshine</b>: A modified version of Google's companion app. for udacity's course.</li>
-			<li><b>Yamba</b>: A micro blogging app. created while learning from 
-			<a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">Android Bootcamp Series 2012</a>.</li>
+			<li><b>Yamba</b>: A micro blogging app. created while learning from
+				<a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">Android Bootcamp Series</a>.</li>
 			<li>others like: file downloader, local APIs testers and random numbers generator!</li>
 		</ul>
 
@@ -37,11 +37,9 @@
 		<ul>
 			<li>Local website to show some downloaded courses. (Mostly from Udacity and Microsoft Virtual Academy)</li>
 			<li><b>E-Bookshop</b>: A website created with my colleague for the university's database course.</li>
-			<li><b>Search engine</b>: (will be done soon!) I will implement the crawler created while learning 
-			from <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
-			Intro to Computer Science</a> course.<br>
-			I <i>advise</i> you to take the course if you are interested in learning about 
-			Computer science and programming.</li>
+			<li><b>Search engine</b>: (will be done soon!) I will implement the crawler created while learning from <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
+			Intro to Computer Science</a> course.
+				<br> I <i>advise</i> you to take the course if you are interested in learning about Computer science and programming.</li>
 			<li><b>Others</b>: shown in <a href="show.html">show room</a> page.</li>
 		</ul>
 
