--- a/show.html
+++ b/show.html
@@ -8,7 +8,7 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>Show room</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -23,7 +23,7 @@
 	</nav>
 
 	<section class="container">
-		
+
 		<div class="row">
 			<div class="col-sm-6">
 				<h4><a href="nearme.html">Near Me</a></h4>
