more html5 and css3 stuff!

--- a/courses.html
+++ b/courses.html
@@ -9,13 +9,16 @@
 	<title>Completed Online Courses</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
 	<link rel="stylesheet" href="css/main.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!--<script src="js/vendors/jquery.min.js"></script>-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!--<script src="js/vendors/bootstrap.min.js"></script>-->
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -25,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">BaderSur</a>
+                <a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,22 +44,14 @@
     </nav>
 
 	<section class="container">
-		<!--<h4>From CodeCademy:</h4>-->
 		<ul class="courses">
-			<li>jQuery, AngularJS, PHP and others from <b>CodeCademy</b>. Click <a href="https://www.codecademy.com/BaderSur">here</a>				to see my profile.</li>
-			<!--</ul>-->
+			<li>jQuery, AngularJS, PHP and others from <strong>CodeCademy</strong>. Click <a href="https://www.codecademy.com/BaderSur">here</a>				to see my profile.</li>
 
-			<!--<h4>From Microsoft Virtual Academy:</h4>-->
-			<!--<ul>-->
-			<li>C#, MS SQL Server and others from <b>Microsoft Virtual Academy</b>. Click <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3423187">here</a>				to see my profile.</li>
-			<!--</ul>-->
+			<li>C#, MS SQL Server and others from <strong>Microsoft Virtual Academy</strong>. Click <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3423187">here</a>				to see my profile.</li>
 
-			<!--<h4>From NewCircle's Youtube channel:</h4>-->
-			<!--<ul>-->
-			<li>Android Bootcamp Series from <b>NewCircle's Youtube channel</b>. Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here</a>				to watch the series.</li>
-			<!--</ul>-->
+			<li>Android Bootcamp Series from <strong>NewCircle's Youtube channel</strong>. Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here</a>				to watch the series.</li>
 
-			<li>From <b>Udacity</b>:
+			<li>From <strong>Udacity</strong>:
 				<ul>
 					<li><a href="https://www.udacity.com/course/developing-android-apps--ud853">Developing Android Apps</a></li>
 					<li><a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
