--- a/projects.html
+++ b/projects.html
@@ -9,13 +9,16 @@
 	<title>Projects</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
 	<link rel="stylesheet" href="css/main.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!--<script src="js/vendors/jquery.min.js"></script>-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!--<script src="js/vendors/bootstrap.min.js"></script>-->
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -25,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">BaderSur</a>
+                <a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,30 +44,30 @@
     </nav>
 
 	<section class="container">
-		<h4>Android Applications</h4>
-		<i>Published applications can be found <a href="https://play.google.com/store/apps/developer?id=BaderSur">here</a>.</i>
+		<h1>Android Applications</h1>
+		<em>Published applications can be found <a href="https://play.google.com/store/apps/developer?id=BaderSur">here</a>.</em>
 		<ul>
-			<li><b>Sur News</b>: fetches local news about Sur using jsoup library.</li>
-			<li><b>Sunshine</b>: A modified version of Google's companion app. for udacity's course.</li>
-			<li><b>Yamba</b>: A micro blogging app. created while learning from
+			<li><strong>Sur News</strong>: fetches local news about Sur using jsoup library.</li>
+			<li><strong>Sunshine</strong>: A modified version of Google's companion app. for udacity's course.</li>
+			<li><strong>Yamba</strong>: A micro blogging app. created while learning from
 				<a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">Android Bootcamp Series</a>.</li>
 			<li>others like: file downloader, local APIs testers and random numbers generator!</li>
 		</ul>
 
-		<h4>Websites</h4>
+		<h1>Websites</h1>
 		<ul>
 			<li>Local website to show some downloaded courses. (Mostly from Udacity and Microsoft Virtual Academy)</li>
-			<li><b>E-Bookshop</b>: A website created with my colleague for the university's database course.</li>
-			<li><b>Search engine</b>: (will be done soon!) I will implement the crawler created while learning from <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
+			<li><strong>E-Bookshop</strong>: A website created with my colleague for the university's database course.</li>
+			<li><strong>Search engine</strong>: (will be done soon) I will implement the crawler created while learning from <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
 			Intro to Computer Science</a> course.
-				<br> I <i>advise</i> you to take the course if you are interested in learning about Computer science and programming.</li>
-			<li><b>Others</b>: shown in <a href="show.html">show room</a> page.</li>
+				<br> I <em>advise</em> you to take the course if you are interested in learning about Computer science and programming.</li>
+			<li><strong>Others</strong> are shown in <a href="show.html">show room</a> page.</li>
 		</ul>
 
-		<h4>WPF Desktop Applications</h4>
+		<h1>WPF Desktop Applications</h1>
 		<ul>
-			<li><b>Image viewer</b>: lists the images in any folder and stretches their width to the maximum width of the application.</li>
-			<li><b>Hasher</b>: computes the hash values of the files.</li>
+			<li><strong>Image viewer</strong>: lists the images in any folder and stretches their width to the maximum width of the application.</li>
+			<li><strong>Hasher</strong>: computes the hash values of the files.</li>
 	</section>
 
 </body>
