--- a/show.html
+++ b/show.html
@@ -9,13 +9,16 @@
 	<title>Show room</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
 	<link rel="stylesheet" href="css/main.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!--<script src="js/vendors/jquery.min.js"></script>-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!--<script src="js/vendors/bootstrap.min.js"></script>-->
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -25,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">BaderSur</a>
+                <a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,7 +48,7 @@
 
 		<div class="row">
 			<div class="col-sm-6">
-				<h4><a href="nearme.html">Near Me</a></h4>
+				<h1><a href="nearme.html">Near Me</a></h1>
 				<a href="nearme.html">
 					<img alt="near me image" src="images/nearme.jpg" class="img-responsive">
 				</a>
@@ -53,16 +56,16 @@
 			</div>
 
 			<div class="col-sm-6">
-				<h4><a href="reader.html">Reader</a></h4>
+				<h1><a href="reader.html">Reader</a></h1>
 				<a href="reader.html">
 					<img alt="Innovation Cloud image" src="images/show-reader.jpg" class="img-responsive">
 				</a>
 				<p class="description">Read your articles interactively.
-					<br>
+					<!--<br>-->
 					<ul>
-						<li><b>Click</b> any article to open/close it. (or press <b>o</b>)</li>
-						<li>press <b>m</b> / <b>b</b> to move between articles.</li>
-						<li>press <b>n</b> / <b>p</b> to move and open the article.</li>
+						<li><strong>Click</strong> any article to open/close it. (or press <strong>o</strong>)</li>
+						<li>press <strong>m</strong> / <strong>b</strong> to move between articles.</li>
+						<li>press <strong>n</strong> / <strong>p</strong> to move and open the article.</li>
 					</ul>
 				</p>
 			</div>
