adding some SEO stuff

--- a/courses.html
+++ b/courses.html
@@ -6,7 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Completed Online Courses</title>
+	<title>Completed Online Courses - BaderSur</title>
+	<meta name="description" content="A list of all online courses that @BaderSur has completed!">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
@@ -45,11 +46,11 @@
 
 	<section class="container">
 		<ul class="courses">
-			<li>jQuery, AngularJS, PHP and others from <strong>CodeCademy</strong>. Click <a href="https://www.codecademy.com/BaderSur">here</a>				to see my profile.</li>
+			<li>jQuery, AngularJS, PHP and others from <strong>CodeCademy</strong>. Click <a href="https://www.codecademy.com/BaderSur">here to see my profile</a>.</li>
 
-			<li>C#, MS SQL Server and others from <strong>Microsoft Virtual Academy</strong>. Click <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3423187">here</a>				to see my profile.</li>
+			<li>C#, MS SQL Server and others from <strong>Microsoft Virtual Academy</strong>. Click <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3423187">here to see my profile</a>.</li>
 
-			<li>Android Bootcamp Series from <strong>NewCircle's Youtube channel</strong>. Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here</a>				to watch the series.</li>
+			<li>Android Bootcamp Series from <strong>NewCircle's Youtube channel</strong>. Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here to watch the series</a>.</li>
 
 			<li>From <strong>Udacity</strong>:
 				<ul>
