--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Personal Site</title>
+	<title>Personal page - BaderSur, About</title>
+	<meta name="description" content="Information about @BaderSur like his skills and contact info which may help him to conquer this world.">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
