--- a/nearme.html
+++ b/nearme.html
@@ -6,14 +6,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>NearMe</title>
+	<title>NearMe - BaderSur, Project</title>
+	<meta name="description" content="AngularJS application that shows a map.">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,600">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css">
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />-->
+	<link rel="stylesheet" href="css/leaflet.css" />
 	<link rel="stylesheet" href="css/near.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>-->
+	<script src="js/vendors/angular.min.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>-->
+	<script src="js/vendors/angular-route.min.js"></script>
+	<!--<script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>-->
+	<script src="js/vendors/leaflet.js"></script>
 	<script src="js/vendors/angular-leaflet-directive.min.js"></script>
 	<script src="js/vendors/helpers.js"></script>
 	<noscript>
