--- a/reader.html
+++ b/reader.html
@@ -6,11 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Reader</title>
+	<title>Reader - BaderSur, Project</title>
+	<meta name="description" content="JavaScript page that helps to read articles interactively.">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/reader.css">
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
+	<script src="js/vendors/jquery.min.js"></script>
 	<script src="js/reader.js"></script>
 	<noscript>
 		<header>
