some css modifications

--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,7 @@
 			<li>Android Bootcamp Series from <strong>NewCircle's Youtube channel</strong>. Click <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">here to watch the series</a>.</li>
 
 			<li>From <strong>Udacity</strong>:
-				<ul>
+				<ul class="udacity">
 					<li><a href="https://www.udacity.com/course/developing-android-apps--ud853">Developing Android Apps</a></li>
 					<li><a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
 			Intro to Computer Science</a></li>
