--- a/reader.html
+++ b/reader.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,11 +9,11 @@
 	<title>Reader - BaderSur, Project</title>
 	<meta name="description" content="JavaScript page that helps to read articles interactively.">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
 	<link rel="stylesheet" href="css/reader.css">
-	<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
-	<script src="js/vendors/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!--<script src="js/vendors/jquery.min.js"></script>-->
 	<script src="js/reader.js"></script>
 	<noscript>
 		<header>
