Add 'web Development' to courses

--- a/courses.html
+++ b/courses.html
@@ -20,29 +20,31 @@
 
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-expanded="false">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
-            </div>
+				<a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
+			</div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="top-menu">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="show.html">Show room</a></li>
-                    <li class="active"><a href="courses.html">Completed courses</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="top-menu">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="show.html">Show room</a></li>
+					<li class="active"><a href="courses.html">Completed courses</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
 
 	<section class="container">
 		<ul class="courses">
@@ -54,6 +56,7 @@
 
 			<li>From <strong>Udacity</strong>:
 				<ul class="udacity">
+					<li><a href="https://www.udacity.com/course/web-development--cs253">Web Development</a></li>
 					<li><a href="https://www.udacity.com/course/developing-android-apps--ud853">Developing Android Apps</a></li>
 					<li><a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
 			Intro to Computer Science</a></li>
